# zloty-euro-converter

./: README.md  setup.cfg
src/zl_converter/: converter.py
src/zloty_euro_converter_derBanz.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
