[metadata]
name = zloty-euro-converter-derBanz
version = 0.0.1
author = derBanz
author_email = sebastian.banz@yahoo.de
description = Converter package PLN <-> Euro
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/derBanz/zloty-euro-converter
project_urls =
    Bug Tracker = https://github.com/derBanz/zloty-euro-converter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src